# mcp-crypto-portfolio

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
src/: kucoin_client.py  notion_client.py  portfolio.py  server.py
